Fix PR target/9797 and PR c/9853.

* stmt.c (expand_decl_init): Call push_temp_slots () and
	pop_temp_slots ().

From-SVN: r64250